<resources>
    <string name="app_name">prototype_to_Sql</string>
    <string name="bt_crear">Crear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ph_id">Id</string>
    <string name="ph_name">Nombres</string>
    <string name="ph_telefono">Teléfono</string>
    <string name="ph_correo">Correo</string>
    <string name="ph_edad">Edad</string>
    <string name="bt_save">Guardar</string>

    <string name="bt_options">Opciones</string>
    <string name="bt_data">Registros</string>
    <string name="bt_edit">Editar</string>

    <string name="titleDataSection">Registros</string>
    <string name="buttonSearch">Buscar</string>
    <string name="buttonDelete">Eliminar</string>
    <string name="buttonUpdate">Actualizar</string>
</resources>