<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveMethod_Fragment">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        android:padding="20dp">

        <EditText
            android:id="@+id/et_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/ph_name"
            android:fontFamily="monospace"/>

        <EditText
            android:id="@+id/et_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:fontFamily="monospace"
            android:hint="@string/ph_telefono"
            android:minHeight="48dp"/>

        <EditText
            android:id="@+id/et_Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:fontFamily="monospace"
            android:hint="@string/ph_correo"/>

        <EditText
            android:id="@+id/et_Edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:fontFamily="monospace"
            android:hint="@string/ph_edad"/>

        <Button
            android:id="@+id/bt_Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bt_save"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>